--- a/style.css
+++ b/style.css
@@ -1,28 +1,244 @@
 body {
-    font-family: Arial, sans-serif;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    background-color: #000;
+    color: #fff;
+    
+    
+  }
+  
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+  
+  .content {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    width: 100%;
+    max-width: 1200px;
+    margin-top: 50px;
+  }
+  
+  .form-section {
+    width: 50%;
+    margin-right: 20px;
+  }
+  
+  h1 {
+    background:linear-gradient(90deg,#0008fe, #00ff11);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
     text-align: center;
-}
-
-label {
-    display: block;
-    margin-bottom: 10px;
-}
-
-input[type="number"] {
-    width: 20%;
-    height: 20px;
     margin-bottom: 20px;
-}
-
-input[type="button"] {
-    width: 20%;
-    height: 30px;
+    
+    font-weight: bolder;   
+    text-shadow: #00d4ff;
+  }
+  
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+  
+  label {
+    background:linear-gradient(90deg, #00d4ff, #00ff85);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    margin-bottom: 10px;
     font-size: 16px;
+  }
+  
+  input[type="number"] {
+    padding: 10px;
+    margin-bottom: 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+  
+  select {
+    background-color: #8C8C8C;
+ 
+    padding: 10px;
+    margin-bottom: 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+  
+  input[type="button"] {
+    padding: 15px;
+    background: linear-gradient(90deg, #00d4ff, #00ff85);
+    border: none;
+    color: #000;
+    font-size: 18px;
     cursor: pointer;
-}
-
-#result {
+    text-align: center;
+  }
+  
+  #result {
+    text-align: center;
+    margin-top: 20px;
     font-size: 24px;
     font-weight: bold;
-    margin-top: 20px;
+  }
+  
+  .video-section {
+    position: absolute;
+    margin-top: 150px;
+    top: 0;
+    right: 0;
+    width: 400px;
+    height: 300px;
+  }
+  
+  video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+ 
+  .meter {
+    position: absolute;
+    bottom: 50px;
+    left: 620px;
+    width: 150px; 
+    height: 150px; 
+  }
+  
+  .bottom-video {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover;
+  }
+  #finalresult{
+    text-align: center;
+    text-transform: uppercase;
+    -webkit-text-fill-color: red;
+   font-size: xx-large;
+  }
+  .under {
+    position: absolute;
+    top: 200px;
+    right: 100px; 
+    padding: 10px;
+    
+}
+
+.under-image {
+    width: 250px; 
+    height: 250px; 
+    object-fit: cover;
+    
+}
+#normalbmi{
+    text-align: center;
+    text-transform: uppercase;
+    -webkit-text-fill-color: rgb(0, 255, 0);
+   font-size: xx-large;
+}
+.normal {
+    position: absolute;
+    top: 200px;
+    right: 100px; 
+    padding: 10px;
+    
+}
+
+.normal-image {
+    width: 250px; 
+    height: 250px; 
+    object-fit: cover;
+    
+}
+.over {
+    position: absolute;
+    top: 200px;
+    right: 100px; 
+    padding: 10px;
+    
+}
+
+.over-image {
+    width: 250px; 
+    height: 250px; 
+    object-fit: cover;
+    
+}
+#over{
+    text-align: center;
+    text-transform: uppercase;
+    -webkit-text-fill-color: #FFB74D;
+   font-size: xx-large;
+}
+
+
+#obese{
+    text-align: center;
+    text-transform: uppercase;
+    -webkit-text-fill-color: #E57373;
+   font-size: xx-large;
+   font-weight: bolder
+}
+
+.obese {
+    position: absolute;
+    top: 200px;
+    right: 100px; 
+    padding: 10px;
+    
+}
+
+.obese-image {
+    width: 250px; 
+    height: 250px; 
+    object-fit: cover;
+    
+}
+.table {
+    position: absolute;
+    top: 200px;
+    left: 100px;
+    width: 250px; 
+    height: 250px; 
+}
+
+.table img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.bottom-image-container {
+    width: 250px; 
+    height: 250px;
+    margin-top: 100px;
+    margin-left: 600px; 
+    align-content: center;
+}
+
+.bottom-image-container img {
+    align-self: center;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+ul{
+    margin: 10px;
+    font-family: 'Times New Roman', Times, serif;
+    
+}
+p{
+    margin-left: 6px;
+}
+a{
+    margin-left: 10px;
 }
